<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kol.jumhz.common.widget.ActivityTitle
        android:id="@+id/rl_user_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:canBack="true"
        app:titleText="@string/app_setting" />

    <RelativeLayout
        android:id="@+id/rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@id/rl_user_info_title"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_ui_head"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:background="@drawable/head_round"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:id="@+id/tv_ui_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_ui_head"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold"
            android:textSize="20dp" />
    </RelativeLayout>

    <com.kol.jumhz.view.LineControllerView
        android:id="@+id/lcv_ui_publish_live"
        android:layout_below="@+id/rl_user_info"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:name="@string/app_publish_live"
        app:canNav="true"
        />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/lcv_ui_publish_live"
        android:background="@color/line" />

    <com.kol.jumhz.view.LineControllerView
        android:id="@+id/lcv_ui_relevance_live"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/line"
        app:name="@string/app_relevance_live"
        app:isBottom="true"
        app:canNav="true"/>
    <com.kol.jumhz.view.LineControllerView
        android:id="@+id/lcv_ui_check_aid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lcv_ui_relevance_live"
        android:layout_marginTop="10dp"
        app:name="@string/app_check_aid"
        app:isBottom="true"
        app:canNav="true"/>
    <com.kol.jumhz.view.LineControllerView
        android:id="@+id/lcv_ui_playback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lcv_ui_check_aid"
        android:layout_marginTop="10dp"
        app:name="@string/app_playback"
        app:isBottom="true"
        app:canNav="true"/>

    <RelativeLayout
        android:id="@+id/lcv_ui_close"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/lcv_ui_playback"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@color/colorTextWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_close"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/color_title_black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lcv_ui_logout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/lcv_ui_close"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@color/colorTextWhite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_out"
            android:textSize="18sp"
            android:textColor="@color/colorRed" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="v000"
        android:textSize="@dimen/_font_36px_port"
        android:textColor="@color/colorTextG1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|center_vertical">
        <TextView
            android:id="@+id/tv_xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yhxy1"
            android:layout_marginEnd="5dp"
            android:textSize="@dimen/_font_36px_port"
            android:textColor="@color/colorAccent" />
        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/tv_yinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/yszc1"
            android:textSize="@dimen/_font_36px_port"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>


</RelativeLayout>

