<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.kol.jumhz.common.widget.ActivityTitle
            android:id="@+id/rl_user_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:canBack="true" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_below="@id/rl_user_login_title"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/logo1"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/iv_logo"
            android:layout_marginTop="40dp"
            android:text="@string/activity_login_username_assistant"
            android:textSize="14sp"
            android:textColor="@color/colorTextG4"
            />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_username"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:hint="@string/activity_login_username_hint"
            android:textColorHint="@color/colorTextG2"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorTextG4"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F0F0F2"
            android:layout_below="@id/et_username"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/et_username"
            android:text="@string/activity_login_password"
            android:textSize="14sp"
            android:textColor="@color/colorTextG4"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textColor="@color/colorTextG4"
            android:hint="@string/activity_login_password_hint"
            android:textColorHint="@color/colorTextG2"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F0F0F2"
            android:layout_below="@id/et_password"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:layout_below="@+id/et_password"
            android:text="@string/activity_login_login"
            android:textColor="@color/white"
            android:padding="0dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:enabled="false"
            android:background="@drawable/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_below="@+id/btn_login"
            android:text="@string/activity_register_register"
            android:textColor="@color/colorTextBlack"
            android:padding="0dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="22dp"
            android:clickable="true"
            android:background="@drawable/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_anchor_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_register"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:text="@string/activity_login_anchor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|center_vertical">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:background="@drawable/checkbox_selectors"
                android:button="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已阅读并同意"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yhxy"
                android:textSize="14sp"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="和"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_yinsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yszc"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/btn_login"/>
        <ImageView
            android:id="@+id/iv_login_succeed"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_login_succeed"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/btn_login"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>