<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="contentDescription">


    <com.kol.jumhz.common.widget.ActivityTitle
        android:id="@+id/at_eui_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleText="@string/userinfo_title"
        app:moreText="@string/btn_save"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/rl_eui_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_200px_port"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:onClick="onClick"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/w_90px_port"
            android:gravity="center_vertical"
            android:text="@string/userinfo_head"
            android:textColor="@color/colorTextG4"
            android:textSize="@dimen/_font_36px_port" />

        <ImageView
            android:id="@+id/iv_eui_head"
            android:layout_width="@dimen/w_120px_port"
            android:layout_height="@dimen/h_120px_port"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/w_76px_port"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:background="@drawable/head_round"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_200px_port"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/w_90px_port"
            android:gravity="center_vertical"
            android:text="@string/userinfo_nickname"
            android:textColor="@color/colorTextG4"
            android:textSize="@dimen/_font_36px_port" />
        <EditText
            android:id="@+id/et_eui_nickname"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_font_36px_port"
            android:background="@color/transparent"
            android:layout_marginRight="@dimen/w_76px_port"
            android:singleLine="true"
            android:textColor="@color/text_gray1" />
    </LinearLayout>

</LinearLayout>
