<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTextWhite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F3F3F3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="@color/colorTextWhite">
        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/colorGray8"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/tv_titile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_image"
            android:layout_toEndOf="@id/iv_image"
            android:layout_marginLeft="15dp"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorTextBlack" />
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_titile"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_image"
            android:layout_marginLeft="15dp"
            android:text=""
            android:textSize="14sp"
            android:textColor="@color/colorTextG3" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/layout_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_edit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_edit"
                android:textSize="13sp"
                android:textColor="@color/colorTextG4"/>
        </LinearLayout>

        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorTextG2" />
        <LinearLayout
            android:id="@+id/layout_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_share"
                android:textSize="13sp"
                android:textColor="@color/colorTextG4"/>
        </LinearLayout>
        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorTextG2" />

        <LinearLayout
            android:id="@+id/layout_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_delete_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_delete"
                android:textSize="13sp"
                android:textColor="@color/colorTextG4"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>